--- a/Bones.Tests/Bones.Tests.csproj
+++ b/Bones.Tests/Bones.Tests.csproj
@@ -7,10 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="coverlet.msbuild" Version="2.4.0" />
+        <PackageReference Include="Machine.Specifications" Version="0.12.0" />
+        <PackageReference Include="Machine.Specifications.Runner.VisualStudio" Version="2.7.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-        <PackageReference Include="NUnit" Version="3.11.0" />
-        <PackageReference Include="NUnit.Specifications" Version="2.0.1" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.11.2" />
         <PackageReference Include="PowerAssert" Version="1.0.85" />
     </ItemGroup>
 
