fixed some of the test execution (we now have more tests to make work) added some benchmarks (apprently this is running just a little bit slower than Autofac, but we need to take into account autofac does way more)

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ Bones.TestApp/obj/
 Bones.TestApp/bin/
 lcov.info
 .vscode/
+Bones.Benchmarks/BenchmarkDotNet.Artifacts/
+Bones.Benchmarks/obj/Release/netcoreapp2.1/Bones.Benchmarks.assets.cache
+Bones.Benchmarks/obj/
+Bones.Benchmarks/bin/
