--- a/Bones/Bones.csproj
+++ b/Bones/Bones.csproj
@@ -16,4 +16,8 @@
       <None Remove="Factories\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FastExpressionCompiler" Version="1.10.1" />
+    </ItemGroup>
+
 </Project>
