--- a/src/Bonsai/Bonsai.csproj
+++ b/src/Bonsai/Bonsai.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <BuildNumber Condition=" '$(BuildNumber)' == '' ">0.0.1</BuildNumber>
+    <Version>$(BuildNumber)</Version>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <PackageId>Bonsai.Ioc</PackageId>
     <PackageTitle>Bonsai</PackageTitle>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
