--- a/src/Bonsai/Bonsai.csproj
+++ b/src/Bonsai/Bonsai.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <Version>0.0.1</Version>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <PackageId>Bonsai.Ioc</PackageId>
     <PackageTitle>Bonsai</PackageTitle>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
