--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ Bones.sln.DotSettings.user
 
 results reflection/
 src/Bonsai.sln.DotSettings.user
+images/Untitled-1.svg
+images/Untitled-1.ai
+images/HIROSHT.TTF
+src/Bonsai.Tests/coverage.opencover.xml
