--- a/src/Bonsai/Bonsai.csproj
+++ b/src/Bonsai/Bonsai.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <PackageReference Include="FastExpressionCompiler" Version="1.10.1" />
+    <PackageReference Include="ImTools.dll" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
