--- a/src/Bonsai.Benchmarks/Bonsai.Benchmarks.csproj
+++ b/src/Bonsai.Benchmarks/Bonsai.Benchmarks.csproj
@@ -10,10 +10,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Autofac" Version="4.8.1" />
-      <PackageReference Include="BenchmarkDotNet" Version="0.11.3" />
-      <PackageReference Include="Castle.Windsor" Version="5.0.0-beta001" />
-      <PackageReference Include="Grace" Version="6.4.2" />
+      <PackageReference Include="Autofac" Version="4.9.3" />
+      <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
+      <PackageReference Include="Castle.Windsor" Version="5.0.0" />
+      <PackageReference Include="Grace" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     </ItemGroup>
 
 </Project>
